feat: rankings endpoints
