# http-handler/docs/swagger.json
@@ -853,6 +853,106 @@
                 }
             }
         },
+        "/ranking/court/{id}": {
+            "get": {
+                "description": "Retourne la liste des utilisateurs et leur ELO pour un court donné, triée par ELO croissant",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ranking"
+                ],
+                "summary": "Classement ELO par terrain",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Identifiant du court",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CourtRankingResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "ID manquant",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Utilisateur non autorisé",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Erreur serveur / base",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/ranking/user/{userId}": {
+            "get": {
+                "description": "Retourne uniquement la liste des fields associés à un utilisateur (ex: terrains classés/évalués)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Liste des terrains (fields) d’un utilisateur",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Identifiant de l'utilisateur",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Field"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "userId manquant",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Utilisateur non autorisé",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Erreur serveur / base",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/register": {
             "post": {
                 "description": "Register a user with username and password",
@@ -1175,6 +1275,17 @@
             "type": "object",
             "properties": {
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CourtRankingResponse": {
+            "type": "object",
+            "properties": {
+                "elo": {
+                    "type": "integer"
+                },
+                "userId": {
                     "type": "string"
                 }
             }
