# models/ranking.go
@@ -1,0 +1,6 @@
+package models
+
+type CourtRankingResponse struct {
+	UserID string `json:"userId" db:"user_id"`
+	Elo    int    `json:"elo"    db:"elo"`
+}
